Fixed history page margin being uneven

--- a/client/src/static/css/App.css
+++ b/client/src/static/css/App.css
@@ -682,6 +682,10 @@ table td {
   color: #e5e5e5;
 }
 
+#history-container {
+  margin: auto;
+}
+
 #history-container #account-button-div {
   display: flex;
   flex-direction: column;
