--- a/client/src/static/scss/_historypage.scss
+++ b/client/src/static/scss/_historypage.scss
@@ -83,6 +83,8 @@
 }
 
 #history-container {
+  margin: auto;
+
   #account-button-div {
     display: flex;
     flex-direction: column;
